# imager-service

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  docker-compose.yml  ftptester.py
.github/workflows/: docker-api.yaml  docker-ui.yaml  docker-worker.yaml  docker.yml
contrib/: cache-policy.yaml  imager-worker-restart.sh
creator/: Dockerfile  README.md
creator/creator/: __main__.py  worker.py
creator/creator/utils/: creation.py  download.py  scheduler.py  setting.py
docs/: Cardshop instructions EN.odp
manager/: .dockerignore  .gitignore  Caddyfile  Dockerfile  entrypoint.sh  nginx.conf  pyproject.toml  requirements.txt  supervisord.conf  uwsgi-manager.ini  uwsgi-status.ini  uwsgi.ini
manager/deploy/: entrypoint.sh  nginx.conf  uwsgi.ini
manager/locale/fr/LC_MESSAGES/: django.mo  django.po
manager/manager/: __about__.py  admin.py  auth.py  builder.py  builder.py.test  decorators.py  email.py  emailing.py  kiwix_library.py  middlewares.py  models.py  scheduler.py  settings.py  urls.py  utils.py
manager/manager/fixtures/: media.json
manager/manager/management/commands/: check_configs.py  content_stats.py  convert-to-opds-ids.py  convert_to_app_catalog.py  convert_to_opds_ids.py  convertdata.py  fix-missing-packages.py  fix_missing_packages.py  get_durations.py  makemessages.py  move-kalite.py  move_kalite.py  periodic-tasks.py  periodic_tasks.py  set_expiry.py
manager/manager/migrations/: 0001_initial.py  0002_auto_20180703_0938.py  0002_configuration_content_nomad.py  0003_auto_20180703_0944.py  0003_auto_20200120_0939.py  0004_auto_20180703_1533.py  0004_auto_20200312_1557.py  0005_auto_20201016_1452.py  0006_profile_can_order_physical.py  0007_auto_20201102_1040.py  0008_auto_20201109_1040.py  0009_auto_20201109_1043.py  0010_auto_20201110_1543.py  0011_passwordresetcode.py  0012_auto_20201111_1158.py  0013_auto_20201118_1409.py  0014_auto_20210428_1135.py  0015_auto_20210917_0931.py  0016_auto_20211129_1019.py  0017_auto_20230228_1149.py  0018_auto_20230228_1650.py  0019_auto_20230913_1108.py  0020_auto_20230914_1152.py  0021_auto_20230929_1603.py  0022_order_config_yaml_alter_configuration_language.py  0023_configuration_content_metrics.py  0024_remove_configuration_branding_css.py  0025_alter_configuration_content_edupi_and_more.py  0026_configuration_content_packages_and_more.py  0027_configuration_option_kiwix_readers_and_more.py  0028_configuration_beta_features_and_more.py  0029_remove_configuration_content_africatik_and_more.py  0030_configuration_ssid_and_more.py  0031_alter_configuration_project_name_and_more.py  0032_configuration_variant.py
manager/manager/pibox/: __init__.py  config.py  content.py  data.py  packages.py  packages.py.orig  util.py
manager/manager/static/css/: primary.css
manager/manager/templates/: _file_preview.html  _input_field.html  _label_for.html  _locked_badge.html  _paginator.html  _sort_header.html  _sorting_params.html  add_shipping.html  address_edit.html  address_list.html  admin.html  all_orders-detail.html  all_orders.html  base.html  beta.html  configuration_edit.html  configuration_list.html  configurations.html  delete_account.html  edit_configuration.html  error.html  home.html  login.html  order.html  order_config.html  order_detail.html  order_list.html  order_new.html  orders.html  password_change.html  password_reset.html  password_reset_confirm.html  password_reset_email.html  scheduler.html
manager/manager/templatetags/: manager.py
manager/manager/views/: admin.py  all_orders.py  api.py  common.py  config.py  scheduler.py  ui.py
manager/status/: main.py  requirements.txt
manager/status/templates/: status.html
manager/tests/: test_dummy.py
monitor/: Dockerfile
monitor/app/: main.py  requirements.txt
rabbit/: Dockerfile  docker-cardshop-entrypoint.sh  rabbitmq.conf
scheduler/: Dockerfile  README.md  crontab
scheduler/src/: app.py  babel.config  emailing.py  entrypoint.sh  main.py  periodic-tasks.py  prestart.py  requirements.txt  uwsgi.ini
scheduler/src/routes/: __init__.py  auth.py  autoimages.py  channels.py  errors.py  home.py  orders.py  stripe.py  tasks.py  users.py  warehouses.py  woo.py  workers.py
scheduler/src/templates/: assembly_add_shipment.html  client_image_uploaded.html  client_image_written.html  email_base.html  email_order_base.html  email_order_created.html  invoice.html  macros.html  operator_card_inserted.html  operator_image_written.html  operator_insert_card.html  operator_order_failed.html  operator_ship_card.html  operator_worker_sos.html  pub_add_shipment.html  pub_base.html  pub_confirm_inserted.html  pub_thank_inserted.html  pub_thank_shipment.html  recipient_image_uploaded_public.html  recipient_order_created.html  recipient_order_failed.html  recipient_order_shipped.html  shipping.html  subject_base.txt  subject_card_inserted.txt  subject_image_uploaded.txt  subject_image_uploaded_public.txt  subject_image_written.txt  subject_insert_card.txt  subject_order_failed.txt  subject_order_new.txt  subject_order_shipped.txt  subject_order_status-changed.txt  subject_ship_card.txt  subject_worker_sos.txt
scheduler/src/utils/: countries.py  files.py  json.py  mongo.py  serialnumber.py  status.py  templates.py  token.py  wasabi.py
scheduler/test/: conftest.py  test_auth.py
scripts/: extend_validity.py
sloppy/: manager.json
warehouse/: Dockerfile  README.md
warehouse/app/: main.py  requirements.txt
whost/: README.md  pyproject.toml  requirements.txt  reverse-ssh.service  whost-config  whost-configurator  whost-restart-all  whost-setup  whost-start-all  whost-start-worker  whost-stop-all  whost-update
whost/whost/: common.py  devices.py  network.py
whost/whost/ui/: __init__.py  cli.py  credentials.py  devices.py  home.py  network.py
workers/: Dockerfile  cardshopworker.policy  requirements.txt
workers/worker/: __main__.py  base.py  creator.py  downloader.py  writer.py
workers/worker/tasks/: base.py  create.py  download.py  write.py
workers/worker/utils/: __init__.py  s3.py  scheduler.py  setting.py  storage.py
(+14 files in other folders)
