[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "manager"
authors = [
  { name = "Kiwix", email = "dev@kiwix.org" },
]
keywords = ["kiwix", "imager", "manager"]
requires-python = ">=3.11"
description = "Kiwix Imager Service UI"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
]
dependencies = [
  "Django==5.0.14",
  "requests==2.32.4",
  "werkzeug>=3.0.6",
  "iso639-lang==2.6.3",
  "xmltodict==0.13.0", # offspot-config blocking 0.14.2
  "Babel==2.17.0",
  "phonenumbers==9.0.19",
  "Pillow==11.1.0",
  "pycountry==24.6.1",
  "python-magic==0.4.27",
  "humanfriendly==10.0",
  "ansi2html==1.9.2",
  "mysqlclient==2.2.7",
  "offspot-config==2.9.2",
  # "offspot-config@git+https://github.com/offspot/offspot-config#egg=main",
  "PyYAML==6.0.1",  # offspot-config blocking 6.0.2
  "python-dateutil==2.9.0.post0",
]
dynamic = ["version"]

[project.optional-dependencies]
scripts = [
  "invoke==2.2.0",
]
lint = [
  "black==25.1.0",
  "ruff==0.11.4",
]
check = [
  "pyright==1.1.398",
]
test = [
  "pytest==8.3.5",
  "coverage==7.8.0",
]
dev = [
  "pre-commit==4.2.0",
  "debugpy==1.8.13",
  "ipython==9.1.0",
  "manager[scripts]",
  "manager[lint]",
  "manager[test]",
  "manager[check]",
]

[project.urls]
Homepage = "https://github.com/offspot/cardshop"
Donate = "https://www.kiwix.org/en/support-us/"

[tool.hatch.version]
path = "manager/__about__.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
exclude = [
  "/.github",
]

[tool.hatch.envs.default]
features = ["dev"]

[tool.hatch.envs.test]
features = ["scripts", "test"]

[[tool.hatch.envs.test.matrix]]
python = ["3.11"]

[tool.hatch.envs.test.scripts]
run = "inv test --args '{args}'"
run-cov = "inv test-cov --args '{args}'"
report-cov = "inv report-cov"
coverage = "inv coverage --args '{args}'"
html = "inv coverage --html --args '{args}'"

[tool.hatch.envs.lint]
template = "lint"
skip-install = false
features = ["scripts", "lint"]

[tool.hatch.envs.lint.scripts]
black = "inv lint-black --args '{args}'"
ruff = "inv lint-ruff --args '{args}'"
all = "inv lintall --args '{args}'"
fix-black = "inv fix-black --args '{args}'"
fix-ruff = "inv fix-ruff --args '{args}'"
fixall = "inv fixall --args '{args}'"

[tool.hatch.envs.check]
features = ["scripts", "check"]

[tool.hatch.envs.check.scripts]
pyright = "inv check-pyright --args '{args}'"
all = "inv checkall --args '{args}'"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["manager/"]
lint.select = [
  "A",  # flake8-builtins
  # "ANN",  # flake8-annotations
  "ARG",  # flake8-unused-arguments
  # "ASYNC",  # flake8-async
  "B",  # flake8-bugbear
  # "BLE",  # flake8-blind-except
  "C4",  # flake8-comprehensions
  "C90",  # mccabe
  # "COM",  # flake8-commas
  # "D",  # pydocstyle
  # "DJ",  # flake8-django
  # "DTZ",  # flake8-datetimez
  "E",  # pycodestyle (default)
  "EM",  # flake8-errmsg
  # "ERA",  # eradicate
  # "EXE",  # flake8-executable
  "F",  # Pyflakes (default)
  # "FA",  # flake8-future-annotations
  "FBT",  # flake8-boolean-trap
  # "FLY",  # flynt
  # "G",  # flake8-logging-format
  "I",  # isort
  "ICN",  # flake8-import-conventions
  # "INP",  # flake8-no-pep420
  # "INT",  # flake8-gettext
  # "ISC",  # flake8-implicit-str-concat
  "N",  # pep8-naming
  # "NPY",  # NumPy-specific rules
  # "PD",  # pandas-vet
  # "PGH",  # pygrep-hooks
  # "PIE",  # flake8-pie
  # "PL",  # Pylint
  "PLC",  # Pylint: Convention
  "PLE",  # Pylint: Error
  "PLR",  # Pylint: Refactor
  "PLW",  # Pylint: Warning
  # "PT",  # flake8-pytest-style
  # "PTH",  # flake8-use-pathlib
  # "PYI",  # flake8-pyi
  "Q",  # flake8-quotes
  # "RET",  # flake8-return
  # "RSE",  # flake8-raise
  "RUF",  # Ruff-specific rules
  "S",  # flake8-bandit
  # "SIM",  # flake8-simplify
  # "SLF",  # flake8-self
  "T10",  # flake8-debugger
  "T20",  # flake8-print
  # "TCH",  # flake8-type-checking
  # "TD",  # flake8-todos
  "TID",  # flake8-tidy-imports
  # "TRY",  # tryceratops
  "UP",  # pyupgrade
  "W",  # pycodestyle
  "YTT",  # flake8-2020
]
lint.ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Remove flake8-errmsg since we consider they bloat the code and provide limited value
  "EM",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105", "S106", "S107",
  # Ignore warnings on subprocess.run / popen
  "S603",
  # Ignore complexity
  "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
]
lint.unfixable = [
  # Don't touch unused imports
  "F401",
]
lint.exclude = ["manager/migrations/*", "manager/management/commands/convertdata.py"]

[tool.ruff.lint.isort]
known-first-party = ["manager"]

[tool.ruff.lint.flake8-bugbear]
# add exceptions to B008 for fastapi.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]
"**/management/commands/*.py" = ["E501", "T201"]
"**/email.py" = ["A005"]

[tool.pytest.ini_options]
minversion = "7.3"
testpaths = ["tests"]
pythonpath = [".", "manager"]

[tool.coverage.paths]
manager = ["manager"]
tests = ["tests"]

[tool.coverage.run]
source_pkgs = ["manager"]
branch = true
parallel = true
omit = [
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.pyright]
include = ["manager", "tests", "tasks.py"]
exclude = [".env/**", ".venv/**"]
extraPaths = ["manager"]
pythonVersion = "3.11"
typeCheckingMode="basic"
reportImplicitStringConcatenation = false
